<?xml version="1.0"?>
<package format="2">
  <name>ur10e</name>
  <version>0.0.0</version>
  <description>Norlab's ROS UR10e controller</description>

  <maintainer email="andre@gallantandre.com">andre</maintainer>

  <license>BSD</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
