<?xml version="1.0"?>
<package format="2">
  <name>ur10e_gui</name>
  <version>0.0.1</version>
  <description>The gui package for the ur10e controller.</description>

  <maintainer email="andre@gallantandre.com">Andre Gallant</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
